--- a/WebRTC/mainstyles.css
+++ b/WebRTC/mainstyles.css
@@ -20,9 +20,7 @@ body {
     text-transform: normal;
     font-family: 'Source Sans Pro', sans-serif;
     font-size-adjust: 0.58;
-    line-height: 1.4em;
-    text-align: center;
-    overflow-y: scroll;
+    line-height: 1.5em;
     width: 100%;
     padding:0;
     margin:0;
@@ -68,7 +66,7 @@ li {
     left: 25%;
     top: 0px;
     text-align: center;
-    /*border: 1px solid blue;*/
+    border: 1px solid blue;
 }
 
 .video-div {
@@ -77,7 +75,7 @@ li {
     height: auto;
     padding: 0px;
     margin: 0px;
-    /*border: 1px solid green;*/
+    border: 1px solid green;
 
 }
 
@@ -86,23 +84,25 @@ li {
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 90%;
+    height: calc(100% - 70px);
+    border: 1px solid red;
 }
 
 .input-area {
+    display: block;
     position: relative;
+    top: 0px;
+    left: 0px;
     width: inherit;
-    text-align: left;
-    position: relative;
     padding: inherit;
     margin: inherit;
 }
 
 .annotation-list {
-    position: absolute;
-	right:0;
-	top: 90px;
-    width: inherit;
+    position: relative;
+    right:0;
+    top: 20px;
+    width: 60%;
     max-height: 30em;
     text-align: left;
     padding: inherit;
