--- a/myAnnotate.css
+++ b/myAnnotate.css
@@ -318,23 +318,26 @@ figure[data-fullscreen=true] .controls .progress {
 
 }
 .without_ampm::-webkit-datetime-edit-ampm-field {
-   display: none;
- }
- input[type=time]::-webkit-clear-button {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   -o-appearance: none;
-   -ms-appearance:none;
-   appearance: none;
-   margin: -10px;
- }
-/*
+    display: none;
+}
+input[type=time]::-webkit-clear-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    -ms-appearance:none;
+    appearance: none;
+    margin: -10px;
+}
+
 #check:hover{
-    background-color: darkgray;
-}*/
+background-color: darkgray;
+}
 .sbut{
     position: relative;
     left: 19px;
-
 }
 
+.assign-buttons:hover{
+    background-color: darkgray;
+
+}
