load html and css
the labels can be loaded, and some of the annotations.  Just not in the correct order yet

--- a/AppV2/myAnnotate.css
+++ b/AppV2/myAnnotate.css
@@ -595,3 +595,8 @@ background-color: darkgray;
   text-decoration: none;
   cursor: pointer;
 }
+
+#print{
+    position: relative;
+    top: 50px;
+}
